--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Rats are COMING 🐀</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Click if you are not SCARED 🐭</h1>
+
+  <div id="popup" class="hidden">
+    <img id="rat-image" src="" alt="Ratte" />
+    <h2 id="rat-name">Rattenname</h2>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
