--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Click if you are not SCARED 🐭</h1>
+<div id="scare-text">Click if you are not SCARED 👻</div>
 
   <div id="popup" class="hidden">
     <img id="rat-image" src="" alt="Ratte" />
