--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Rats are COMING 🐀</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ratten Troll Website 🐀</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div id="scare-text">Click if you are not SCARED 👻</div>
-
+  
+  <!-- Das Popup mit der gezogenen Ratte -->
   <div id="popup" class="hidden">
+    <div id="scare-text">Click if you are not SCARED 👻</div>
     <img id="rat-image" src="" alt="Ratte" />
     <h2 id="rat-name">Rattenname</h2>
   </div>
@@ -17,4 +18,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
