--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   
-  <!-- Das Popup mit der gezogenen Ratte -->
-  <div id="popup" class="hidden">
-    <div id="scare-text">Click if you are not SCARED 👻</div>
-    <img id="rat-image" src="" alt="Ratte" />
-    <h2 id="rat-name">Rattenname</h2>
-  </div>
+<!-- Das Popup mit der gezogenen Ratte -->
+<div id="popup" class="hidden">
+  <div id="scare-text">Click if you are not SCARED 👻</div>
+  <img id="rat-image" class="hidden" src="" alt="Ratte" />
+  <h2 id="rat-name" class="hidden">Rattenname</h2>
+</div>
 
   <script src="script.js"></script>
 </body>
