--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="popup" class="hidden">
   <div id="scare-text">Click if you are not SCARED 👻</div>
   <img id="rat-image" class="hidden" src="" alt="Your Rat 🐀" />
-  <h2 id="rat-name" class="hidden"></h2>
+  <h2 id="rat-name" class="hidden">test</h2>
 </div>
   
 
