--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Das Popup mit der gezogenen Ratte -->
 <div id="popup" class="hidden">
   <div id="scare-text">Click if you are not SCARED 👻</div>
-  <img id="rat-image" class="hidden" src="" alt="Your Rat 🐀" />
-  <h2 id="rat-name" class="hidden">test</h2>
+  <img id="rat-image" class="hidden" src="" alt=" " />
+  <h2 id="rat-name" class="hidden"> </h2>
 </div>
   
 
