--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Rats are coming 🐀</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Rats are coming</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-<!-- Das Popup mit der gezogenen Ratte -->
-<div id="popup" class="hidden">
-  <div id="scare-text">Click if you are not SCARED 👻</div>
-  <img id="rat-image" class="hidden" src="" alt=" " />
-  <h2 id="rat-name" class="hidden"> </h2>
-</div>
-  
+
+  <!-- Das Popup mit der gezogenen Ratte -->
+  <div id="popup" class="hidden">
+    <div id="scare-text">CLICK ME</div>
+    <img id="rat-image" class="hidden" src="" alt="Ratte" />
+    <h2 id="rat-name" class="hidden"> </h2>
+    <p id="click-text" class="hidden">CLICK ME AGAIN</p>
+  </div>
 
   <script src="script.js"></script>
 </body>
