--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TheRatsAreCOMING</title>
-<link rel="stylesheet" href="style.css" />
+  <title>TheRatsareComing</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Das Popup mit der gezogenen Ratte -->
-  <div id="popup" class="hidden">
+  <!-- Popup Box -->
+  <div id="popup">
     <div id="scare-text">Click if you are not SCARED 👻</div>
-    <img id="rat-image" src="" alt="Ratte" class="hidden" />
-    <h2 id="rat-name" class="hidden">test</h2>
-    <div id="click-text" class="hidden">CLICK ME AGAIN</div>
+    <img id="rat-image" class="hidden" src="" alt="Ratte" />
+    <h2 id="rat-name" class="hidden"></h2>
   </div>
 
   <script src="script.js"></script>
