--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <!-- Popup Box -->
   <div id="popup">
-    <div id="scare-text">Click if you are not SCARED 👻</div>
+    <div id="scare-text">Click anywhere to see the next rat!</div>
     <img id="rat-image" class="hidden" src="" alt="Ratte" />
     <h2 id="rat-name" class="hidden"></h2>
+    <p id="rat-rarity" class="hidden"></p>
   </div>
 
   <script src="script.js"></script>
